<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/test_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:padding="5dp"
        android:background="@drawable/red_rounded"
        android:gravity="center"
        android:text="@string/test_banner_default"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/edit_url"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text=""
        android:background="#00000000" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/login_logo"/>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_input_height"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:layout_marginBottom="20dp"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:hint="@string/name" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_input_height"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:layout_marginBottom="20dp"
        android:autofillHints="password,numberPassword"
        android:inputType="numberPassword"
        android:hint="@string/password" >
    </EditText>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/default_input_height"
        android:layout_marginHorizontal="@dimen/default_form_margin_x"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text16"
        android:text="@string/login"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="10dp" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>
