<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:background="@color/dark_grey"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_orders"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/total_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/priority"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/priority_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/priority_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/priority_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="-10dp"
            android:orientation="horizontal" >

            <!--            <Button-->
            <!--                android:id="@+id/preferences"-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginEnd="10dp"-->
            <!--                android:insetBottom="0dp"-->
            <!--                android:insetTop="0dp"-->
            <!--                app:cornerRadius="10dp"-->
            <!--                android:padding="0dp"-->
            <!--                app:icon="@drawable/settings"-->
            <!--                app:iconGravity="textStart"-->
            <!--                app:iconPadding="0dp"-->
            <!--                app:iconSize="24dp" />-->

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                app:cornerRadius="10dp"
                android:text="@string/exit"
                android:padding="5dp"
                android:backgroundTint="#D32F2F"
                app:icon="?attr/actionModeCloseDrawable"
                app:iconPadding="0dp"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/closed_orders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                app:cornerRadius="10dp"
                android:text="@string/closed_orders"
                android:padding="5dp"
                android:backgroundTint="#1976D2" />

            <Button
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                app:cornerRadius="10dp"
                android:text="@string/refresh"
                android:padding="5dp"
                android:backgroundTint="#388E3C" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        tools:visibility="gone" />

    <ListView
        android:id="@+id/orders_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight=".5dp"
        android:visibility="gone"
        tools:listitem="@layout/item"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_orders_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:text="no items found"
        android:textColor="@color/dark_grey"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
